--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,8 @@ dependencies:
     - opencv-python-headless
     - pyqtgraph>=0.11.0rc0
     - natsort
-    - GitPython
+    - python-git
+    - simple-file-checksum
     - tqdm
     - tifffile
     - fastremap
